Phase 5 complete: Premium UI, Audio, Particles and UX improvements

--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css">
-    <title>Phaser React Template</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="theme-color" content="#1a3a2a" />
+    <meta name="description" content="Cinco Vidas - Juego de cartas de baraja española multijugador" />
+    <meta property="og:title" content="Cinco Vidas" />
+    <meta property="og:description" content="Juego de cartas de baraja española multijugador online" />
+    <meta property="og:type" content="website" />
+    <title>Cinco Vidas</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-
 </body>
 </html>
